--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
     <meta property="og:image:height" content="200">
     <meta property="og:type" content="website">
     <meta property="og:type" content="article">
-    <meta property="article:author" content="https://vinayaksingh.com/">
-    <meta property="og:site_name" content="vinayaksingh.com">
+    <meta property="article:author" content="Bekhzod Olimov">
+    <meta property="og:site_name" content="https://portfolio-nu-rosy-30.vercel.app">
     <meta property="article:published_time" content="date_time">
     <meta property="og:locale" content="pt_BR">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
